# bellhop-opengl

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main-muli.test  main.cpp  out.txt  parse.cpp.bak  test.env  test.prt  test.ray  test_floor_E.bty  test_floor_E.env  test_floor_E.prt  test_floor_R.env  text.fs  text_vert.vs
config/cuda/: SetupCUDA.cmake
config/examples/: CMakeLists.txt
evaluation_data/: cpu_100.txt  cpu_1000.txt  cpu_200.txt  cpu_300.txt  cpu_400.txt  cpu_500.txt  cpu_600.txt  cpu_700.txt  cpu_800.txt  cpu_900.txt  gl_cpu_1000.txt  gl_gpu_1000.txt  gpu_100.txt  gpu_1000.txt  gpu_200.txt  gpu_300.txt  gpu_400.txt  gpu_500.txt  gpu_600.txt  gpu_700.txt  gpu_800.txt  gpu_900.txt
examples/: bellhop_GUI.cpp  bellhopgl.cpp  gl_parse_files.py  parse_files.py  test.cpp
glad/: CMakeLists.txt
glad/src/: glad.c
includes/glad/: glad.h
input_output/: test.txt  test_floor_E.ray  test_floor_R.prt  test_floor_R.ray  test_readout.txt.ray
